--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" href="https://cdn.pannellum.org/2.4/pannellum.css"/>
         <script type="text/javascript" src="https://cdn.pannellum.org/2.4/pannellum.js"></script>
         <style>
+            #screen {
+                background-color: white;
+                width: 100%;
+                height: 100%;
+                position: fixed;
+                top: 0;
+                left: 0;
+                z-index: 0;
+            }
             #panorama {
                 width: 100%;
                 height: 100%;
@@ -17,8 +26,11 @@
         </style>
     </head>
     <body>
+        <div id="screen"></div>
         <div id="panorama"></div>
         <script>
+            const oneperson = document.getElementById("panorama");
+            oneperson.style.zIndex = "-1";
             var mobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
             var SCENES = {
                 "default": {
@@ -45,7 +57,9 @@
         
         function sceneTo(x) {
             viewer.loadScene(x);
+            oneperson.style.zIndex = "2";
         }
+        
         </script>
     </body>
 </html>
