--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     "1": {
                         "title": "First Scene",
                         "type": "equirectangular",
-                        "panorama": mobile ? "https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Swampy_forest_panorama.jpg/1280px-Swampy_forest_panorama.jpg" : "https://upload.wikimedia.org/wikipedia/commons/7/76/Swampy_forest_panorama.jpg"
+                        "panorama": mobile ? "https://pascal-the-elf.github.io/Project-H5/360/1_low.jpg" : "https://pascal-the-elf.github.io/Project-H5/360/1_high.jpg"
                     },
                     
                     "2": {
