--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             var ITEMS = [
                          {
                          "title": "一張被油墨弄髒的紙",
-                         "content": "<img src="http://sc-dr.tw/news/104/10/10220104.jpg"></img>"
+                         "content": '<img src="http://sc-dr.tw/news/104/10/10220104.jpg"></img>'
                          }
                          ];
                          var SCENES = {
