--- a/index.html
+++ b/index.html
@@ -4,52 +4,60 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>TEST</title>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-            <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700&display=swap" rel="stylesheet">
-                <link rel="stylesheet" href="https://cdn.pannellum.org/2.4/pannellum.css"/>
-                <style>
-                    body {
-                        font-family: 'Amatic SC', cursive;
-                    }
-                h1 {
-                    font-family: 'Amatic SC', cursive;
-                }
-                .show {
-                    z-index: 5;
-                }
-                #screen {
-                    background-color: white;
-                    width: 100%;
-                    height: 100%;
-                    position: fixed;
-                    top: 0;
-                    left: 0;
-                    z-index: 0;
-                }
-                #panorama {
-                    width: 100%;
-                    height: 100%;
-                    position: fixed;
-                    top: 0;
-                    left: 0;
-                    filter: brightness(.7) grayscale(.6) saturate(.6);
-                }
-                #container {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    height: 100vh;
-                    z-index: 5;
-                }
-                #image {
-                    width: 100%;
-                    height: 100%;
-                    position: fixed;
-                    top: 0;
-                    left: 0;
-                    z-index: 2;
-                }
-                </style>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.pannellum.org/2.4/pannellum.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
+        <style>
+            body {
+                font-family: 'Amatic SC', cursive;
+            }
+        h1 {
+            font-family: 'Amatic SC', cursive;
+        }
+        .show {
+            z-index: 5;
+        }
+        #screen {
+            background-color: white;
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 0;
+        }
+        #panorama {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            filter: brightness(.7) grayscale(.6) saturate(.6);
+        }
+        #container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            z-index: 5;
+        }
+        #image {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 2;
+        }
+        #book {
+            z-index: 10;
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            display: none;
+        }
+        </style>
     </head>
     <body>
         <img id="image" src="https://i.ytimg.com/vi/AtGTot98UAo/maxresdefault.jpg"></img>
@@ -61,9 +69,13 @@
         </div>
         <div id="screen"></div>
         <div id="panorama"></div>
+        <div id="book" onclick="showItem(2)">
+            <i class="fas fa-book fa-5x w3-text-blue"></i>
+        </div>
         <script type="text/javascript" src="https://cdn.pannellum.org/2.4/pannellum.js" onload="document.getElementById('start').style.display = ''"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8" async></script>
         <script>
+            var BOOOOOOOK = 0;
             const oneperson = document.getElementById("panorama");
             oneperson.style.zIndex = "-1";
             var mobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
@@ -71,11 +83,11 @@
             var ITEMS = [
                          {
                          "title": "一張被油墨弄髒的紙",
-                         "content": '<img src="http://sc-dr.tw/news/104/10/10220104.jpg" style="max-width: 100%;"></img>'
+                         "content": '<img src="./res/doc1.jpg" style="max-width: 100%;"></img>'
                          },
                          {
                          "title": "旅遊手冊",
-                         "content": '<iframe src="https://jacoblincool.gitbook.io/travel-in-forest/" style="width: 100%"'
+                         "content": '<iframe src="https://jacoblincool.gitbook.io/travel-in-forest/" style="min-width: 100%; min-height: 70vh; border: 0;"></iframe>'
                          }
                          ];
                          var SCENES = {
@@ -105,7 +117,7 @@
                                                   "yaw": -120,
                                                   "type": "info",
                                                   "text": "旅遊手冊",
-                                                  "URL": 'javascript:showItem(2);updateCP(2);getBook();canLeaveHouse();'
+                                                  "URL": 'javascript:showItem(2);getBook();updateCP(2);canLeaveHouse();'
                                                   }
                                                   ]
                                  },
@@ -172,6 +184,12 @@
         function canLeaveHouse() {
             if(CHECKPOINT >= 2)
             viewer.addHotSpot({"pitch": -8,"yaw": 180,"type": "scene","text": "離開小木屋","URL": "javascript:if(CHECKPOINT>0) sceneTo(2, 4, -62);"});
+        }
+        function getBook() {
+            document.getElementById("book").style.display = "block";
+            if(!BOOOOOOOK)
+            Swal.fire("現在可以從右下角查看旅遊手冊");
+            window.BOOOOOOOK = 1;
         }
         </script>
     </body>
