--- a/index.html
+++ b/index.html
@@ -145,9 +145,16 @@
                                                   ]
                                  },
                                  "3": {
-                                     "title": "森林中",
+                                     "title": "森林步道",
                                      "type": "equirectangular",
                                      "panorama": pic360(3),
+                                     "hotSpots": [
+                                     ]
+                                 },
+                                 "4": {
+                                     "title": "森林深處",
+                                     "type": "equirectangular",
+                                     "panorama": pic360(4),
                                      "hotSpots": [
                                      ]
                                  }
