--- a/index.html
+++ b/index.html
@@ -149,6 +149,22 @@
                                      "type": "equirectangular",
                                      "panorama": pic360(3),
                                      "hotSpots": [
+                                                  {
+                                                  "pitch": -3,
+                                                  "yaw": 90,
+                                                  "type": "scene",
+                                                  "text": "往小木屋方向走",
+                                                  "sceneId": "2",
+                                                  "targetPitch": 4,
+                                                  "targetYaw": -62
+                                                  },
+                                                  {
+                                                  "pitch": -5,
+                                                  "yaw": -97,
+                                                  "type": "scene",
+                                                  "text": "往森林深處走",
+                                                  "sceneId": "4"
+                                                  }
                                      ]
                                  },
                                  "4": {
@@ -156,6 +172,13 @@
                                      "type": "equirectangular",
                                      "panorama": pic360(4),
                                      "hotSpots": [
+                                                  {
+                                                  "pitch": 0,
+                                                  "yaw": 90,
+                                                  "type": "scene",
+                                                  "text": "往步道方向走",
+                                                  "sceneId": "3"
+                                                  }
                                      ]
                                  }
                              }
