--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div id="book" onclick="showItem(2)">
             <i class="fas fa-book fa-5x w3-text-blue"></i>
         </div>
-        <script type="text/javascript" src="https://cdn.pannellum.org/2.4/pannellum.js" onload="document.getElementById('start').style.display = ''"></script>
+        <script type="text/javascript" src="https://cdn.pannellum.org/2.4/pannellum.js" onload="setTimeout(()=>{document.getElementById('start').style.display = ''}, 2000)"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8" async></script>
         <script>
             var BOOOOOOOK = 0;
