--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
                              }
                          };
         var viewer = pannellum.viewer("panorama", SCENES);
-        
+        viewer.on("load",()=>{fadeIn()});
+        if(viewer.isOrientationSupported())
+        viewer.startOrientation();
         function sceneTo(x, p=0, y=0) {
             fadeOut();
             setTimeout(()=>{
@@ -251,20 +253,15 @@
                        viewer.setPitch(p, 0);
                        viewer.setYaw(y, 0);
                        oneperson.style.zIndex = "2";
-                       }, 750);
-                       setTimeout(()=>{fadeIn()}, 2500);
+                       }, 1000);
         }
         function pic360(x) {
             return (mobile ? "https://pascal-the-elf.github.io/Project-H5/360/"+x+"_low.jpg" : "https://pascal-the-elf.github.io/Project-H5/360/"+x+"_high.jpg");
         }
         function gameStart() {
-            fadeOut();
-            setTimeout(()=>{
-                       document.getElementById("image").style.display = "none";
-                       document.getElementById("container").style.display = "none";
-                       sceneTo(1);
-                       fadeIn();
-                       }, 1500);
+            document.getElementById("image").style.display = "none";
+            document.getElementById("container").style.display = "none";
+            sceneTo(1);
         }
         function showItem(x) {
             Swal.fire(
