--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
             var ITEMS = [
                          {
                          "title": "一張被油墨弄髒的紙",
-                         "content": '<img src="./res/doc1.jpg" style="max-width: 100%;"></img>'
+                         "content": '<img src="./res/doc1.jpg" style="max-width: 100%; max-height: 80vh;"></img>'
                          },
                          {
-                         "title": "旅遊手冊",
-                         "content": '<iframe src="https://jacoblincool.gitbook.io/travel-in-forest/" style="min-width: 100%; min-height: 70vh; border: 0;"></iframe>'
+                         "title": "",
+                         "content": '<iframe src="https://jacoblincool.gitbook.io/travel-in-forest/" style="min-width: 100%; min-height: 70vh; max-height: 80vh; border: 0;"></iframe>'
                          }
                          ];
                          var SCENES = {
@@ -267,8 +267,8 @@
         }
         function showItem(x) {
             Swal.fire(
-                      ITEMS[x-1].title,
-                      ITEMS[x-1].content
+                      "",
+                      ITEMS[x-1].content+"<br><span>"+ITEMS[x-1].title+"</span>"
                       );
         }
         function updateCP(x) {
